force-app/main/default/objects/leaseworks__Aircraft__c/fields/pro_Most_Recent_Achieved_Target_Year__c.field-meta.xml
<CustomField>
    <fullName>pro_Most_Recent_Achieved_Target_Year__c</fullName>
    <description>Field returns as a text value the year of the most recently achieved target</description>
    <formula>TEXT(YEAR(ADDMONTHS(pro_Most_Recent_Target_Achieved_Date__c, -12)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Most Recent Achieved Target Year</label>
    <type>Text</type>
</CustomField>