force-app/main/default/objects/leaseworks__Aircraft__c/fields/pro_MR_Claims__c.field-meta.xml
<CustomField>
    <fullName>pro_MR_Claims__c</fullName>
    <formula>HYPERLINK(&apos;/?sort=&apos; &amp; leaseworks__Lease__r.leaseworks__Operator_New__r.MR_Claims__r.FirstName &amp; &apos; &apos; &amp; leaseworks__Lease__r.leaseworks__Operator_New__r.MR_Claims__r.LastName, &apos;&apos;, &apos;_blank&apos;) &amp;
HYPERLINK(&apos;/&apos; &amp; leaseworks__Lease__r.leaseworks__Operator_New__r.MR_Claims__c, leaseworks__Lease__r.leaseworks__Operator_New__r.MR_Claims__r.FirstName &amp; &apos; &apos; &amp; leaseworks__Lease__r.leaseworks__Operator_New__r.MR_Claims__r.LastName, &apos;_blank&apos;)</formula>
    <label>MR Claims</label>
    <type>Text</type>
</CustomField>