force-app/main/default/objects/leaseworks__Aircraft__c/fields/pro_Omit_From_Targets__c.field-meta.xml
<CustomField>
    <fullName>pro_Omit_From_Targets__c</fullName>
    <description>Evaluates as true if Impact Type = &apos;Russian&apos;, Status = &apos;Sold&apos;, or Likely Outcome = &apos;Sale&apos;</description>
    <formula>ISPICKVAL( pro_Impact_Type__c , &apos;Russia&apos;) ||  ISPICKVAL(leaseworks__Status__c , &apos;Sold&apos;)||   ISPICKVAL(Likely_Outcome__c , &apos;Sale&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Omit From Targets</label>
    <type>Checkbox</type>
</CustomField>