force-app/main/default/objects/leaseworks__Aircraft__c/fields/pro_Open_Target_Count__c.field-meta.xml
<CustomField>
    <fullName>pro_Open_Target_Count__c</fullName>
    <label>Open Target Count</label>
    <summaryFilterItems>
        <field>pro_Asset_Target_Audit__c.pro_Progress_Picklist__c</field>
        <operation>contains</operation>
        <value>Open</value>
    </summaryFilterItems>
    <summaryForeignKey>pro_Asset_Target_Audit__c.pro_Asset__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>