force-app/main/default/objects/leaseworks__Aircraft__c/fields/pro_Open_Target_End_Date__c.field-meta.xml
<CustomField>
    <fullName>pro_Open_Target_End_Date__c</fullName>
    <description>Roll up calculates the Target End Date from any open target</description>
    <label>Open Target End Date</label>
    <summarizedField>pro_Asset_Target_Audit__c.pro_Target_End_Date__c</summarizedField>
    <summaryFilterItems>
        <field>pro_Asset_Target_Audit__c.pro_Progress_Picklist__c</field>
        <operation>contains</operation>
        <value>Open</value>
    </summaryFilterItems>
    <summaryForeignKey>pro_Asset_Target_Audit__c.pro_Asset__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>