force-app/main/default/objects/leaseworks__Aircraft__c/fields/pro_Operational_Status__c.field-meta.xml
<CustomField>
    <fullName>pro_Operational_Status__c</fullName>
    <description>Operational status options dependent on the Status field.</description>
    <label>Operational Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>leaseworks__Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Production</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Pending Delivery</fullName>
            </value>
            <value>
                <fullName>Stored</fullName>
            </value>
            <value>
                <fullName>AOG</fullName>
            </value>
            <value>
                <fullName>Pending Sale</fullName>
            </value>
            <value>
                <fullName>Pending Purchase</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Russia Impacted</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>AOG (R)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>