force-app/main/default/objects/leaseworks__Aircraft__c/fields/pro_Operator_Assigned__c.field-meta.xml
<CustomField>
    <fullName>pro_Operator_Assigned__c</fullName>
    <formula>IF(
  ISBLANK(leaseworks__Lease__r.leaseworks__Operator_New__r.Name),
  NULL,
  HYPERLINK(
    &apos;/&apos; &amp; leaseworks__Lease__r.leaseworks__Operator_New__c,
    leaseworks__Lease__r.leaseworks__Operator_New__r.Name,
    &quot;_blank&quot;
  )
)</formula>
    <label>Operator Assigned</label>
    <type>Text</type>
</CustomField>