force-app/main/default/objects/leaseworks__Aircraft__c/fields/pro_Owner_Financing__c.field-meta.xml
<CustomField>
    <fullName>pro_Owner_Financing__c</fullName>
    <description>Value from Financing field on the related Asset Owner</description>
    <formula>leaseworks__Asset_Owner_new__r.Financing_Local__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Financing</label>
    <type>Text</type>
</CustomField>