force-app/main/default/objects/leaseworks__Aircraft__c/fields/pro_Prev_Yr_FH__c.field-meta.xml
<CustomField>
    <fullName>pro_Prev_Yr_FH__c</fullName>
    <label>Prev. Yr FH</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>