force-app/main/default/objects/leaseworks__Aircraft__c/fields/pro_Reporting_Region__c.field-meta.xml
<CustomField>
    <fullName>pro_Reporting_Region__c</fullName>
    <formula>TEXT( leaseworks__Lease__r.leaseworks__Lessee_New__r.pro_Reporting_Region__c )</formula>
    <label>Reporting Region</label>
    <type>Text</type>
</CustomField>