force-app/main/default/objects/leaseworks__Aircraft__c/fields/pro_Target_End_Date__c.field-meta.xml
<CustomField>
    <fullName>pro_Target_End_Date__c</fullName>
    <description>Whenever an Open Target&#39;s End Date get&#39;s changed, a flow runs to push the new value into this field.</description>
    <label>Target End Date</label>
    <type>Date</type>
</CustomField>