force-app/main/default/objects/leaseworks__Aircraft__c/fields/pro_Target_Forecast_Date__c.field-meta.xml
<CustomField>
    <fullName>pro_Target_Forecast_Date__c</fullName>
    <formula>ADDMONTHS(pro_Open_Target_End_Date__c, -12)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target Forecast Date</label>
    <type>Date</type>
</CustomField>