force-app/main/default/objects/leaseworks__Aircraft__c/fields/pro_Target_Moved_To_Trading__c.field-meta.xml
<CustomField>
    <fullName>pro_Target_Moved_To_Trading__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Box can be manually checked within the Target Management Console to flag that the Asset has been included in the Trading team&apos;s RFP and allow this to be reflected in the Asset Target Audit&apos;s Progress field. (Field API name retained as pro_Target_Moved_To_Trading__c — only the label and downstream UI references have changed.)</description>
    <inlineHelpText>Tick when the Asset has been included in the Trading team&apos;s RFP. Drives the Asset Target Audit&apos;s Progress field.</inlineHelpText>
    <label>Included in Trading RFP</label>
    <type>Checkbox</type>
</CustomField>