force-app/main/default/objects/leaseworks__Aircraft__c/fields/pro_Target_Year__c.field-meta.xml
<CustomField>
    <fullName>pro_Target_Year__c</fullName>
    <formula>TEXT(YEAR(ADDMONTHS( pro_Open_Target_End_Date__c , -12)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target Year</label>
    <type>Text</type>
</CustomField>