force-app/main/default/objects/leaseworks__Aircraft__c/fields/pro_Trading_RFP_Probability__c.field-meta.xml
<CustomField>
    <fullName>pro_Trading_RFP_Probability__c</fullName>
    <description>Commercial team&#39;s estimate of how likely the Asset is to be placed via the Trading RFP. Maintained inline on the Target Management Console&#39;s Assets tab.</description>
    <inlineHelpText>Likelihood the asset will be placed via the Trading RFP.</inlineHelpText>
    <label>Trading RFP Probability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>