force-app/main/default/objects/leaseworks__Aircraft__c/fields/Total_Fuel_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Total_Fuel_Capacity__c</fullName>
    <label>Total Fuel Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>