force-app/main/default/objects/leaseworks__Aircraft__c/recordTypes/leaseworks__Aircraft.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__Aircraft</fullName>
    <active>true</active>
    <description>Aircraft Asset Type</description>
    <label>Aircraft Asset</label>
</RecordType>