force-app/main/default/objects/leaseworks__Aircraft__c/recordTypes/leaseworks__Engine.recordType-meta.xml
<RecordType>
    <fullName>leaseworks__Engine</fullName>
    <active>true</active>
    <description>Engine Asset Type</description>
    <label>Engine Asset</label>
</RecordType>