force-app/main/default/objects/leaseworks__Aircraft__c/validationRules/leaseworks__DepreciationScheduleBookValueRule.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__DepreciationScheduleBookValueRule</fullName>
    <active>true</active>
    <errorConditionFormula>!ISBLANK(leaseworks__Depreciation_Schedule__c)
&amp;&amp; ISBLANK(leaseworks__Equipment_Cost__c) &amp;&amp; ISBLANK(leaseworks__Book_Value__c)</errorConditionFormula>
    <errorMessage>Please enter Book Value or Equipment Cost.</errorMessage>
</ValidationRule>