force-app/main/default/objects/leaseworks__Aircraft__c/validationRules/leaseworks__DepreciationScheduleStatutoryValueRule.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__DepreciationScheduleStatutoryValueRule</fullName>
    <active>true</active>
    <errorConditionFormula>!ISBLANK(leaseworks__Statutory_Depreciation_Schedule__c)
&amp;&amp; ISBLANK(leaseworks__Equipment_Cost__c) &amp;&amp;  ISBLANK(leaseworks__Statutory_Value__c)</errorConditionFormula>
    <errorMessage>Please enter Statutory Value or Equipment Cost.</errorMessage>
</ValidationRule>