force-app/main/default/objects/leaseworks__Aircraft__c/validationRules/leaseworks__DepreciationScheduleTaxValueRule.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__DepreciationScheduleTaxValueRule</fullName>
    <active>true</active>
    <errorConditionFormula>!ISBLANK(leaseworks__Tax_Depreciation_Schedule__c)
&amp;&amp; ISBLANK(leaseworks__Equipment_Cost__c) &amp;&amp; ISBLANK(leaseworks__Tax_Value__c)</errorConditionFormula>
    <errorMessage>Please enter Tax Value or Equipment Cost.</errorMessage>
</ValidationRule>