force-app/main/default/objects/leaseworks__Aircraft__c/validationRules/leaseworks__NoAssignedStatusOnCreate.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__NoAssignedStatusOnCreate</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Text( leaseworks__Status__c )==&#39;Assigned&#39;,  ISNEW() )</errorConditionFormula>
    <errorDisplayField>leaseworks__Status__c</errorDisplayField>
    <errorMessage>Aircraft cannot be created in Assigned status.</errorMessage>
</ValidationRule>