force-app/main/default/objects/leaseworks__Aircraft__c/validationRules/leaseworks__NoAssignedStatusWithoutLease.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__NoAssignedStatusWithoutLease</fullName>
    <active>true</active>
    <errorConditionFormula>AND( !ISNEW(),Text( leaseworks__Status__c )==&#39;Assigned&#39;,  Text(PRIORVALUE( leaseworks__Status__c ))!=&#39;Assigned&#39;,IsBlank( leaseworks__Lease__c ) )</errorConditionFormula>
    <errorDisplayField>leaseworks__Status__c</errorDisplayField>
    <errorMessage>Aircraft cannot be set in Assigned status without Lease.</errorMessage>
</ValidationRule>