force-app/main/default/objects/leaseworks__Aircraft__c/validationRules/leaseworks__PurchaseJournalOnlyWithAcquisitionDate.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__PurchaseJournalOnlyWithAcquisitionDate</fullName>
    <active>true</active>
    <description>Purchase Journal Entries Can Be Created Only After Acquisition Date Is Entered.</description>
    <errorConditionFormula>AND(ISBLANK(leaseworks__Date_Acquired__c), leaseworks__Generate_Aircraft_Purchase_Journals__c)</errorConditionFormula>
    <errorDisplayField>leaseworks__Date_Acquired__c</errorDisplayField>
    <errorMessage>Please enter Date Acquired to generate Purchase Journal Entries.</errorMessage>
</ValidationRule>