force-app/main/default/objects/leaseworks__Aircraft__c/listViews/Active_Engines.listView-meta.xml
<ListView>
    <fullName>Active_Engines</fullName>
    <columns>NAME</columns>
    <columns>leaseworks__Asset_Variant_GP__c</columns>
    <columns>Orderbook_Ref__c</columns>
    <columns>leaseworks__Date_of_Manufacture__c</columns>
    <columns>leaseworks__Status__c</columns>
    <columns>pro_Impact_Type__c</columns>
    <columns>leaseworks__Assigned_To__c</columns>
    <columns>leaseworks__Lease__c</columns>
    <columns>leaseworks__TSN__c</columns>
    <columns>leaseworks__CSN__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>leaseworks__Aircraft__c.leaseworks__Engine</value>
    </filters>
    <filters>
        <field>leaseworks__Status__c</field>
        <operation>equals</operation>
        <value>Assigned,Available</value>
    </filters>
    <label>Active Engines</label>
</ListView>