force-app/main/default/objects/leaseworks__Aircraft__c/listViews/All_Aircrafts.listView-meta.xml
<ListView>
    <fullName>All_Aircrafts</fullName>
    <columns>NAME</columns>
    <columns>leaseworks__Asset_Owner_new__c</columns>
    <columns>leaseworks__Asset_Variant_GP__c</columns>
    <columns>leaseworks__Date_of_Manufacture__c</columns>
    <columns>pro_Impact_Type__c</columns>
    <columns>pro_Current_Status__c</columns>
    <columns>leaseworks__Assigned_To__c</columns>
    <columns>leaseworks__Lease__c</columns>
    <columns>leaseworks__Registration_Number__c</columns>
    <columns>leaseworks__TSN__c</columns>
    <columns>leaseworks__CSN__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>leaseworks__Aircraft__c.leaseworks__Aircraft</value>
    </filters>
    <label>All Aircraft</label>
</ListView>