force-app/main/default/objects/leaseworks__Aircraft__c/listViews/leaseworks__Aircraft.listView-meta.xml
<ListView>
    <fullName>leaseworks__Aircraft</fullName>
    <columns>NAME</columns>
    <columns>Transaction_Code__c</columns>
    <columns>leaseworks__Asset_Variant_GP__c</columns>
    <columns>leaseworks__Manufacturer__c</columns>
    <columns>Orderbook_Ref__c</columns>
    <columns>leaseworks__Status__c</columns>
    <columns>pro_Current_Status__c</columns>
    <columns>leaseworks__Date_of_Manufacture__c</columns>
    <columns>leaseworks__Assigned_To__c</columns>
    <columns>leaseworks__Lease__c</columns>
    <columns>leaseworks__Registration_Number__c</columns>
    <columns>leaseworks__TSN__c</columns>
    <columns>leaseworks__CSN__c</columns>
    <columns>leaseworks__Y_Hidden_Lease_End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>