force-app/main/default/objects/leaseworks__Aircraft__c/listViews/Orderbook.listView-meta.xml
<ListView>
    <fullName>Orderbook</fullName>
    <columns>Orderbook_Ref__c</columns>
    <columns>NAME</columns>
    <columns>leaseworks__Asset_Type_GP__c</columns>
    <columns>leaseworks__Engine_Type_GP__c</columns>
    <columns>leaseworks__Status__c</columns>
    <columns>pro_Current_Status__c</columns>
    <columns>leaseworks__Date_Acquired__c</columns>
    <columns>leaseworks__Assigned_To__c</columns>
    <columns>leaseworks__Lease__c</columns>
    <columns>leaseworks__Date_of_Manufacture__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Orderbook_Ref__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>Orderbook</label>
</ListView>